2011-11-08  Ethan A Merritt  <merritt@u.washington.edu>

	* configure.in src/set.c: Use nl_langinfo(CODESET) to find the encoding.
	This hopefully works around non-standard encoding names used by Solaris.

2011-11-08  Bastian Maerkisch  <bmaerkisch@web.de>

	* doc/gnuplot.doc [New features]: Document new cairolatex and
	revised windows terminal.

2010-11-08  Tatsuro Matsuoka  <tmacchant3@yahoo.co.jp>

	* src/set.c (set_degreesign): Move include of iconv.h to top level.

2011-11-07  Bastian Maerkisch  <bmaerkisch@web.de>

	* term/fig.trm: Update help on font option.

	* term/context.trm: Avoid use of round() because MSVC is still not
	C99-compliant.

	New terminal driver cairolatex, which uses the cairo EPS or PDF
	backend for graphics output and LaTeX text created by functions
	shared with the epslatex and pslatex terminals.

	* term/cairo.term term/post.h term/post.trm term/pslatex.trm: New
	terminal driver cairolatex.
	Patch #3413095

2011-11-06  Mojca Miklavec <mojca.miklavec.lists@gmail.com>

	Add a context terminal, which creates output suitable for ConTeXt.

	* configure.in docs/doc2texi.el docs/gnuplot.doc docs/Makefile.in
	src/makefile.all src/makefile.awc src/term.h term/context.trm:
	New terminal driver context.
	Patches #1654807 and #1503836. Feature Request #2815867.

2011-11-05  Ethan A Merritt  <merritt@u.washington.edu>

	* src/wxterminal/wxt_gui.cpp src/wxterminal/wxt_gui.h
	src/wxterminal/wxt_term.h term/wxt.trm:
	Add support in wxt terminal for toggling individual plots on/off
	by clicking on the corresponding key sample.

2011-11-04  Ethan A Merritt  <merritt@u.washington.edu>

	term/wxt.trm src/wxterminal/wxt_term.h src/wxterminal/wxt_gui.cpp:
	Add a term->layer() entry point for the wxt terminal.

	* src/mouse.c src/term_api.h: TERM_LAYER_BEFORE_ZOOM

2011-11-02  Ethan A Merritt  <merritt@u.washington.edu>

	* src/util.c src/util.h src/set.c (set_encoding set_degreesign):
	Provide an internal char sequence degree_sign[] appropriate for the